Fail to bootup four harts SMP
RCU stall detected on hart 1
On a four-hart SMP system, the CPU stalls after
the kernel logs "Run /init as init process."
I currently have no idea why this problem occurs.

[    2.884948] Run /init as init process
[   23.944299] rcu: INFO: rcu_sched self-detected stall on CPU
[   23.944577] rcu: 	1-...!: (5249 ticks this GP) idle=4aac/1/0x40000002 softirq=24/24 fqs=1
[   23.945081] rcu: 	(t=5250 jiffies g=-1127 q=78 ncpus=4)
[   23.945383] rcu: rcu_sched kthread starved for 5247 jiffies! g-1127 f0x0 RCU_GP_DOING_FQS(6) ->state=0x0 ->cpu=3
[   23.945880] rcu: 	Unless rcu_sched kthread gets sufficient CPU time, OOM is now expected behavior.
[   23.946266] rcu: RCU grace-period kthread stack dump:
[   23.946512] task:rcu_sched       state:R  running task     stack:0     pid:12    tgid:12    ppid:2      flags:0x00000000
[   23.947096] Call Trace:
[   23.947271] [<c03b6378>] __schedule+0x224/0x3b8
[   23.947613] rcu: Stack dump where RCU GP kthread last ran:
[   23.947876] Task dump for CPU 3:
[   23.948073] task:rcu_sched       state:R  running task     stack:0     pid:12    tgid:12    ppid:2      flags:0x00000000
[   23.948657] Call Trace:
[   23.948832] [<c03b6378>] __schedule+0x224/0x3b8
[   23.949184] CPU: 1 PID: 0 Comm: swapper/1 Not tainted 6.9.0-dirty #4
[   23.949548] Hardware name: semu (DT)
[   23.949762] epc : default_idle_call+0x30/0x48
[   23.950123]  ra : default_idle_call+0x2c/0x48
[   23.950484] epc : c03b479c ra : c03b4798 sp : c0891f90
[   23.950801]  gp : c0530950 tp : c084e900 t0 : c08cfcb0
[   23.951119]  t1 : 00017004 t2 : 00000000 s0 : c0891fa0
[   23.951421]  s1 : c0531158 a0 : 03084aa9 a1 : c084e900
[   23.951737]  a2 : 00000001 a3 : 00000004 a4 : c03eb2a8
[   23.952033]  a5 : 00000000 a6 : ffffffff a7 : fffedd05
[   23.952340]  s2 : 00000001 s3 : c0531290 s4 : 00000000
[   23.952636]  s5 : 00000000 s6 : 00000000 s7 : 00000000
[   23.952921]  s8 : 00000000 s9 : 00000000 s10: 00000000
[   23.953207]  s11: 00000000 t3

--- a/minimal.dts
+++ b/minimal.dts
@@ -97,7 +97,7 @@
             compatible = "sifive,plic-1.0.0";
             reg = <0x0000000 0x4000000>;
             interrupt-controller;
-            interrupts-extended = <&cpu0_intc 9>, <&cpu1_intc 9>;
+            interrupts-extended = <&cpu0_intc 9>, <&cpu1_intc 9>, <&cpu2_intc 9>, <&cpu3_intc 9>;
             riscv,ndev = <31>;
         };
 
@@ -124,12 +124,12 @@
             interrupts = <3>;
         };
 #endif
-	clint0: clint@4300000 {
-    		compatible = "riscv,clint0";
-	    	interrupt-controller;
-    		interrupts-extended = <&cpu0_intc 5>;
-    		reg = <0x4300000 0x10000>;
-  	};
+    };
 
+    clint0: clint@4300000 {
+        compatible = "riscv,clint0";
+        interrupt-controller;
+        interrupts-extended = <&cpu0_intc 5>;
+        reg = <0x4300000 0x10000>;
     };
 };
