--- a/minimal.dts
+++ b/minimal.dts
@@ -81,5 +81,12 @@
             interrupts = <3>;
         };
 #endif
+	clint0: clint@4300000 {
+    		compatible = "riscv,clint0";
+		interrupt-controller;
+    		interrupts-extended = <&cpu0_intc 5>;
+    		reg = <0x4300000 0x10000>;
+  	};
+
     };
 };
