Fail on bootup secondary hart
This is the first modification for semu boot up two harts. The error
message from Linux kernel is shown as below. From the message provided
below, I suspect that this failure is caused by lack of IPI implementation
on semu. Because the kernel log says, its is using IPI.

[    0.000000] Linux version 6.9.0-dirty (ranvd@ranvdPC) (riscv64-unknown-linux-gnu-gcc (gc891d8dc23e) 13.2.0, GNU ld (GNU Binutils) 2.41) #4 SMP Sat May 25 20:09:18 CST 2024
[    0.000000] Machine model: semu
[    0.000000] SBI specification v0.3 detected
[    0.000000] SBI implementation ID=0x999 Version=0x1
[    0.000000] SBI TIME extension detected
[    0.000000] SBI SRST extension detected
[    0.000000] earlycon: ns16550 at MMIO 0xf4000000 (options '')
[    0.000000] printk: legacy bootconsole [ns16550] enabled
[    0.000000] Zone ranges:
[    0.000000]   Normal   [mem 0x0000000000000000-0x000000001fffffff]
[    0.000000] Movable zone start for each node
[    0.000000] Early memory node ranges
[    0.000000]   node   0: [mem 0x0000000000000000-0x000000001fffffff]
[    0.000000] Initmem setup node 0 [mem 0x0000000000000000-0x000000001fffffff]
[    0.000000] SBI HSM extension detected
[    0.000000] Falling back to deprecated "riscv,isa"
[    0.000000] riscv: base ISA extensions aim
[    0.000000] riscv: ELF capabilities aim
[    0.000000] percpu: Embedded 13 pages/cpu s22676 r8192 d22380 u53248
[    0.000000] Kernel command line: earlycon console=ttyS0
[    0.000000] Dentry cache hash table entries: 65536 (order: 6, 262144 bytes, linear)
[    0.000000] Inode-cache hash table entries: 32768 (order: 5, 131072 bytes, linear)
[    0.000000] Built 1 zonelists, mobility grouping on.  Total pages: 130048
[    0.000000] mem auto-init: stack:off, heap alloc:off, heap free:off
[    0.000000] Memory: 505528K/524288K available (3816K kernel code, 340K rwdata, 937K rodata, 216K init, 136K bss, 18760K reserved, 0K cma-reserved)
[    0.000000] SLUB: HWalign=64, Order=0-3, MinObje

--- a/minimal.dts
+++ b/minimal.dts
@@ -33,6 +33,21 @@
                 compatible = "riscv,cpu-intc";
             };
         };
+        cpu1: cpu@1 {
+	    status = "okay";
+            device_type = "cpu";
+            compatible = "riscv";
+            reg = <1>;
+            riscv,isa = "rv32ima";
+            mmu-type = "riscv,rv32";
+            cpu1_intc: interrupt-controller {
+                #interrupt-cells = <1>;
+                #address-cells = <0>;
+                interrupt-controller;
+                compatible = "riscv,cpu-intc";
+            };
+        };
+
     };
 
     sram: memory@0 {
