--- a/minimal.dts
+++ b/minimal.dts
@@ -21,6 +21,7 @@
         #size-cells = <0>;
         timebase-frequency = <65000000>;
         cpu0: cpu@0 {
+            status = "okay";
             device_type = "cpu";
             compatible = "riscv";
             reg = <0>;
@@ -129,10 +130,10 @@
             compatible = "riscv,clint0";
             interrupt-controller;
             interrupts-extended =
-            <&cpu0_intc 1 &cpu0_intc 5>,
-            <&cpu1_intc 1 &cpu1_intc 5>,
-            <&cpu2_intc 1 &cpu2_intc 5>,
-            <&cpu3_intc 1 &cpu3_intc 5>;
+            <&cpu0_intc 3 &cpu0_intc 7>,
+            <&cpu1_intc 3 &cpu1_intc 7>,
+            <&cpu2_intc 3 &cpu2_intc 7>,
+            <&cpu3_intc 3 &cpu3_intc 7>;
             reg = <0x4300000 0x10000>;
         };
     };
