--- a/minimal.dts
+++ b/minimal.dts
@@ -97,7 +97,8 @@
             compatible = "sifive,plic-1.0.0";
             reg = <0x0000000 0x4000000>;
             interrupt-controller;
-            interrupts-extended = <&cpu0_intc 9>, <&cpu1_intc 9>, <&cpu2_intc 9>, <&cpu3_intc 9>;
+            interrupts-extended =  <&cpu0_intc 9>, <&cpu1_intc 9>, <&cpu2_intc 9>, <&cpu3_intc 9>;
+//            interrupts-extended =  <&cpu0_intc 9 &cpu0_intc 11>, <&cpu1_intc 9 &cpu1_intc 11>, <&cpu2_intc 9 &cpu2_intc 11>, <&cpu3_intc 9 &cpu3_intc 11>;
             riscv,ndev = <31>;
         };
 
@@ -129,7 +130,7 @@
     clint0: clint@4300000 {
         compatible = "riscv,clint0";
         interrupt-controller;
-        interrupts-extended = <&cpu0_intc 5>;
+        interrupts-extended = <&cpu0_intc 3 &cpu0_intc 7>,<&cpu1_intc 3 &cpu1_intc 7>,<&cpu2_intc 3 &cpu2_intc 7>,<&cpu3_intc 3 &cpu3_intc 7>;
         reg = <0x4300000 0x10000>;
     };
 };
