Enable SMP by `make check SMP=1`
Before testing the SMP, you need to recompile Linux kernel.
Please substitude the configuration file in `configs/linux.config`
to Linux source code with .config file name, and cross compile it.

--- a/configs/linux.config
+++ b/configs/linux.config
@@ -223,7 +223,7 @@ CONFIG_ARCH_RV32I=y
 # CONFIG_CMODEL_MEDLOW is not set
 CONFIG_CMODEL_MEDANY=y
 CONFIG_MODULE_SECTIONS=y
-# CONFIG_SMP is not set
+CONFIG_SMP=y
 CONFIG_TUNE_GENERIC=y
 # CONFIG_RISCV_ISA_C is not set
 CONFIG_TOOLCHAIN_HAS_ZICBOM=y
