--- a/minimal.dts
+++ b/minimal.dts
@@ -125,12 +125,16 @@
             interrupts = <3>;
         };
 #endif
+        clint0: clint@4300000 {
+            compatible = "riscv,clint0";
+            interrupt-controller;
+            interrupts-extended =
+            <&cpu0_intc 1 &cpu0_intc 5>,
+            <&cpu1_intc 1 &cpu1_intc 5>,
+            <&cpu2_intc 1 &cpu2_intc 5>,
+            <&cpu3_intc 1 &cpu3_intc 5>;
+            reg = <0x4300000 0x10000>;
+        };
     };
 
-    clint0: clint@4300000 {
-        compatible = "riscv,clint0";
-        interrupt-controller;
-        interrupts-extended = <&cpu0_intc 3 &cpu0_intc 7>,<&cpu1_intc 3 &cpu1_intc 7>,<&cpu2_intc 3 &cpu2_intc 7>,<&cpu3_intc 3 &cpu3_intc 7>;
-        reg = <0x4300000 0x10000>;
-    };
 };
