Preliminary SMP support
In this commit, semu is able to simulate SMP architecture on Linux
kernel. The original `vm_t` has been changed to `hart_t`, and now
`vm_t` represents the entire virtual machine. Additionally, HSM,
RFENCE, and IPI SBI extensions have been implemented with rough
implementations.

Before simulation, we need to enable SMP support in the Linux
kernel. Please cross-compile the Linux kernel with the configuration
file located at configs/linux.config

After recompiling the Linux kernel with SMP support enabled, simply
execute `make check SMP=n`, where n means the number of hart you want to
simulate, and SMP=1 is the default setting. If you want to execute semu
by yourself, the --smp argument can be used to specify the hart to
simulate, and you are responsible for modifying the device tree.

--- a/minimal.dts
+++ b/minimal.dts
@@ -1,5 +1,7 @@
 /dts-v1/;
 
+#include "minimal.dtsi"
+
 / {
     #address-cells = <1>;
     #size-cells = <1>;
@@ -20,19 +22,6 @@
         #address-cells = <1>;
         #size-cells = <0>;
         timebase-frequency = <65000000>;
-        cpu0: cpu@0 {
-            device_type = "cpu";
-            compatible = "riscv";
-            reg = <0>;
-            riscv,isa = "rv32ima";
-            mmu-type = "riscv,sv32";
-            cpu0_intc: interrupt-controller {
-                #interrupt-cells = <1>;
-                #address-cells = <0>;
-                interrupt-controller;
-                compatible = "riscv,cpu-intc";
-            };
-        };
     };
 
     sram: memory@0 {
@@ -47,16 +36,6 @@
         compatible = "simple-bus";
         ranges = <0x0 0xF0000000 0x10000000>;
         interrupt-parent = <&plic0>;
-
-        plic0: interrupt-controller@0 {
-            #interrupt-cells = <1>;
-            #address-cells = <0>;
-            compatible = "sifive,plic-1.0.0";
-            reg = <0x0000000 0x4000000>;
-            interrupt-controller;
-            interrupts-extended = <&cpu0_intc 9>;
-            riscv,ndev = <31>;
-        };
 
         serial@4000000 {
             compatible = "ns16550";
@@ -81,12 +60,5 @@
             interrupts = <3>;
         };
 #endif
-        clint0: clint@4300000 {
-            compatible = "riscv,clint0";
-            interrupt-controller;
-            interrupts-extended =
-            <&cpu0_intc 3 &cpu0_intc 7>;
-            reg = <0x4300000 0x10000>;
-        };
     };
 };
